--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Wellness Wallet</title>
 
     <!-- Fonts -->
@@ -15,69 +15,107 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- HEADER -->
     <header>
       <h1>
         <span class="sparkle">&#10024;</span> Wellness Wallet
         <span class="sparkle">&#10024;</span>
       </h1>
       <div class="toggle-container">
-        <!-- Accessible dark mode toggle -->
         <input type="checkbox" id="modeToggle" aria-label="Toggle dark mode" />
-        <label class="switch" for="modeToggle">
-          <span class="slider"></span>
-        </label>
+        <label class="switch" for="modeToggle"
+          ><span class="slider"></span
+        ></label>
       </div>
     </header>
 
-    <!-- SECTION 1: Food for the Soul -->
-    <section class="card" id="soul">
+    <!-- Section 1: Food for the Soul -->
+    <section class="card" id="food-for-the-soul">
       <h2>Food for the Soul</h2>
-      <p id="mantraText">Loading mantra...</p>
-      <audio id="mantraAudio" controls>
-        <source src="assets/voice1.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
-      </audio>
-      <br />
-      <button onclick="nextMantra()">Next</button>
+      <p id="mantraText">Loading mantras...</p>
+      <audio id="mantraAudio" controls></audio>
+      <button id="nextMantraBtn">Next</button>
     </section>
 
-    <!-- SECTION 2: STOP and Reflect -->
-    <section class="card" id="reflect">
+    <!-- Section 2: STOP and Reflect -->
+    <section class="card" id="stop-and-reflect">
       <h2>STOP and Reflect</h2>
-      <p id="moodPrompt">Loading mood prompt...</p>
-      <div id="emojiContainer">
-        <span class="emoji" title="Happy">&#128522;</span>
-        <span class="emoji" title="Sad">&#128546;</span>
-        <span class="emoji" title="Angry">&#128544;</span>
-        <span class="emoji" title="Sleepy">&#128564;</span>
-        <span class="emoji" title="Sick">&#129298;</span>
-      </div>
+      <p id="moodPrompt">Loading mood prompts...</p>
+      <fieldset id="emojiContainer">
+        <legend>Select your current mood</legend>
+        <button
+          class="emoji"
+          data-feeling="happy"
+          type="button"
+          aria-pressed="false"
+          aria-label="Happy face"
+          onkeydown="if(event.key==='Enter'||event.key===' '){this.click();}"
+        >
+          &#128522;
+        </button>
+        <button
+          class="emoji"
+          data-feeling="sad"
+          type="button"
+          aria-pressed="false"
+          aria-label="Sad face"
+          onkeydown="if(event.key==='Enter'||event.key===' '){this.click();}"
+        >
+          &#128546;
+        </button>
+        <button
+          class="emoji"
+          data-feeling="angry"
+          type="button"
+          aria-pressed="false"
+          aria-label="Angry face"
+          onkeydown="if(event.key==='Enter'||event.key===' '){this.click();}"
+        >
+          &#128544;
+        </button>
+        <button
+          class="emoji"
+          data-feeling="sleepy"
+          type="button"
+          aria-pressed="false"
+          aria-label="Sleepy face"
+          onkeydown="if(event.key==='Enter'||event.key===' '){this.click();}"
+        >
+          &#128564;
+        </button>
+        <button
+          class="emoji"
+          data-feeling="sick"
+          type="button"
+          aria-pressed="false"
+          aria-label="Sick face"
+          onkeydown="if(event.key==='Enter'||event.key===' '){this.click();}"
+        >
+          &#129298;
+        </button>
+      </fieldset>
     </section>
 
-    <!-- SECTION 3: The Drop -->
-    <section class="card" id="drop">
+    <!-- Section 3: The Drop -->
+    <section class="card" id="the-drop">
       <h2>The Drop</h2>
-      <img id="cyberImage" src="assets/tip1.jpg" alt="Cybersecurity Tip" />
-      <p id="cyberTip">Loading tip...</p>
-      <button onclick="nextCyberTip()">Next</button>
+      <img id="cyberImage" src="placeholder.jpg" alt="Cybersecurity tip" />
+      <p id="cyberTip">Loading cybersecurity tips...</p>
+      <button id="nextCyberTipBtn">Next</button>
     </section>
 
-    <!-- SECTION 4: What’s on YOUR mind sis? -->
-    <section class="card" id="mind">
+    <!-- Section 4: What’s on YOUR mind sis? -->
+    <section class="card" id="whats-on-your-mind">
       <h2>What’s on YOUR mind sis?</h2>
       <p>Your words are safe here. This is private, just for your peace.</p>
       <iframe
         src="https://forms.gle/D3Knh1qsujpKj7pa6"
         width="100%"
-        height="600px"
+        height="600"
         title="Anonymous message form"
         class="anon-form"
-      >
-      </iframe>
+      ></iframe>
     </section>
 
-    <!-- Scripts -->
     <script src="script.js"></script>
   </body>
 </html>
