✨ Styled up and glowed up: Clean CSS, emoji magic, two-column fab!

--- a/index.html
+++ b/index.html
@@ -2,17 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wellness Wallet</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Wellness Wallet is a self-care + cybersecurity web app for all women looking to breathe, reflect, and protect their peace — digitally and emotionally."
+    />
+    <meta name="author" content="Raenell Banks" />
+
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Wellness Wallet" />
+    <meta
+      property="og:description"
+      content="A digital safe space for women to reset, reflect, and recharge."
+    />
+    <meta property="og:image" content="assets/og-preview.jpg" />
+    <meta
+      property="og:url"
+      content="https://raenellbanks.github.io/wellness-wallet-fusionhacks/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Wellness Wallet" />
+    <meta
+      name="twitter:description"
+      content="Cybersecurity meets self-care in this beautiful wellness web app."
+    />
+    <meta name="twitter:image" content="assets/og-preview.jpg" />
+
+    <!-- Favicon (optional) -->
+    <link rel="icon" href="assets/og-preview.jpg" type="image/jpeg" />
 
     <!-- Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Merienda:ital,wght@1,700&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merienda&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header>
       <h1>
@@ -27,67 +61,65 @@
       </div>
     </header>
 
-    <!-- 🍽️ Section: Food for the Soul -->
-    <section class="card">
-      <h2>Food for the Soul</h2>
-      <div class="split">
-        <div class="split-left">
-          <p id="mantraText">Loading mantras...</p>
-          <button class="fancy-btn" id="nextMantraBtn">Next</button>
-        </div>
-        <div class="split-right">
-          <audio id="mantraAudio" controls></audio>
-        </div>
+    <!-- Food for the Soul -->
+    <section class="card split-section" id="food-for-the-soul">
+      <div class="left">
+        <h2>Food for the Soul</h2>
+        <p id="mantraText">Loading mantras...</p>
+        <button id="nextMantraBtn">Next</button>
+      </div>
+      <div class="right">
+        <audio id="mantraAudio" controls></audio>
       </div>
     </section>
 
-    <!-- 🌈 Section: STOP and Reflect -->
-    <section class="card">
-      <h2>STOP and Reflect</h2>
-      <div class="split square-box">
-        <div class="split-left">
-          <p id="moodPrompt">Loading mood prompts...</p>
-        </div>
-        <div class="split-right">
-          <fieldset id="emojiContainer">
-            <legend>Select your current mood</legend>
-            <button class="emoji" data-feeling="happy" aria-label="Happy">
-              &#128522;
-            </button>
-            <button class="emoji" data-feeling="sad" aria-label="Sad">
-              &#128546;
-            </button>
-            <button class="emoji" data-feeling="angry" aria-label="Angry">
-              &#128544;
-            </button>
-            <button class="emoji" data-feeling="sleepy" aria-label="Sleepy">
-              &#128564;
-            </button>
-            <button class="emoji" data-feeling="sick" aria-label="Sick">
-              &#129298;
-            </button>
-          </fieldset>
-          <div id="emojiResults">No votes yet.</div>
-        </div>
+    <!-- STOP and Reflect -->
+    <section class="card split-section" id="stop-and-reflect">
+      <div class="left">
+        <h2>STOP and Reflect</h2>
+        <p id="moodPrompt">Loading mood prompts...</p>
+      </div>
+      <div class="right">
+        <fieldset id="emojiContainer">
+          <legend>Select your current mood</legend>
+          <button class="emoji" data-feeling="happy" aria-pressed="false">
+            &#128522;
+          </button>
+          <button class="emoji" data-feeling="sad" aria-pressed="false">
+            &#128546;
+          </button>
+          <button class="emoji" data-feeling="angry" aria-pressed="false">
+            &#128544;
+          </button>
+          <button class="emoji" data-feeling="sleepy" aria-pressed="false">
+            &#128564;
+          </button>
+          <button class="emoji" data-feeling="sick" aria-pressed="false">
+            &#129298;
+          </button>
+        </fieldset>
+        <div id="emojiStats"></div>
       </div>
     </section>
 
-    <!-- 🔐 Section: The Drop -->
-    <section class="card">
-      <h2>The Drop</h2>
-      <div class="split">
-        <div class="split-left">
-          <p id="cyberTip">Loading cybersecurity tips...</p>
-          <button class="fancy-btn" id="nextCyberTipBtn">Next</button>
-        </div>
-        <div class="split-right">
-          <img id="cyberImage" src="placeholder.jpg" alt="Tip visual" />
-        </div>
+    <!-- The Drop -->
+    <section class="card split-section" id="the-drop">
+      <div class="left">
+        <h2>The Drop</h2>
+        <p id="cyberTip">Loading cybersecurity tips...</p>
+        <button id="nextCyberTipBtn">Next</button>
+      </div>
+      <div class="right">
+        <img
+          id="cyberImage"
+          src="assets/placeholder.jpg"
+          alt="Cybersecurity illustration"
+        />
       </div>
     </section>
 
-    <!-- 💬 Section: What’s on YOUR mind sis? -->
-    <section class="card">
+    <!-- What’s on YOUR mind sis? -->
+    <section class="card" id="whats-on-your-mind">
       <h2>What’s on YOUR mind sis?</h2>
       <p>Your words are safe here. This is private, just for your peace.</p>
       <iframe
@@ -99,6 +131,7 @@
       ></iframe>
     </section>
 
+    <!-- Scripts -->
     <script src="script.js"></script>
   </body>
 </html>
